Fix sidebar overlapping message input
ChatMessageInput was moved to ChatWindow for fixed position relative to ChatWindow.
It also places the ChatMessageInput inside the Sidebar pushable so the sidebar overlaps the
input field on open.

Task# 88

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -60,10 +60,11 @@ body > div > div > div.register-form {
 
 /* Message Input  */
 #room-message-input {
-  position: absolute;
+  position: fixed;
   width: 100%;
+  left: 0;
   bottom: 0;
-  padding: 10px 12px;
+  padding: 0px 12px;
 }
 #room-message-input input {
   border: 1px solid #a0a0a0;
